--- a/.github/workflows/externals.yaml
+++ b/.github/workflows/externals.yaml
@@ -20,36 +20,34 @@ jobs:
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          password: ${{ secrets.BOT_CI_ISSUES }}
       
       - name: Extract metadata (tags, labels) for Docker
         id: meta
         uses: docker/metadata-action@v4
         with:
           images: |
-            ghcr.io/dune-daq/sl7-externals
+            ghcr.io/art-daq/sl7-externals
           tags: |
             type=raw,value=latest
 
       - name: prepare build dir
         id: prep_build_dir
         run: |
-          build_dir="/home/dingpf/cvmfs_dunedaq"
+          build_dir="/home/eflumerf/cvmfs_artdaq"
           cd $build_dir
           refresh_date=$(date +%y-%m-%d)
-          echo "FROM ghcr.io/dune-daq/sl7-spack:latest" > Dockerfile
+          echo "FROM ghcr.io/art-daq/sl7:latest" > Dockerfile
           echo 'MAINTAINER Pengfei Ding "dingpf@fnal.gov"' >> Dockerfile
           echo "ENV REFRESHED_AT $refresh_date" >> Dockerfile
-          echo "ADD spack-externals /cvmfs/dunedaq.opensciencegrid.org/spack-externals" >> Dockerfile
-          echo "ADD pypi-repo /cvmfs/dunedaq.opensciencegrid.org/pypi-repo" >> Dockerfile
-          echo "ADD tools /cvmfs/dunedaq.opensciencegrid.org/tools" >> Dockerfile
-          echo "ADD setup_dunedaq.sh /cvmfs/dunedaq.opensciencegrid.org/setup_dunedaq.sh" >> Dockerfile
+          echo "ADD https://raw.githubusercontent.com/art-daq/otsdaq_demo/develop/tools/quick-mrb-start.sh /" >> Dockerfile
+          echo "RUN /quick_mrb_start.sh" >> Dockerfile
           echo 'ENTRYPOINT ["/bin/bash"]' >> Dockerfile
 
       - name: Build and push Docker images
         uses: docker/build-push-action@v3
         with:
-          context: /home/dingpf/cvmfs_dunedaq
+          context: /home/eflumerf/cvmfs_artdaq
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
@@ -58,7 +56,7 @@ jobs:
         if: always()
         run: |
 
-            rm -f /home/dingpf/cvmfs_dunedaq/Dockerfile
+            rm -f /home/eflumerf/cvmfs_artdaq/Dockerfile
             docker image prune -f
             docker container prune -f
             docker network prune -f
@@ -79,72 +77,6 @@ jobs:
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       - name: push to dockerhub
         run: |
-          docker pull ghcr.io/dune-daq/sl7-externals:latest
-          docker tag ghcr.io/dune-daq/sl7-externals:latest dunedaq/sl7-externals:latest
-          docker push dunedaq/sl7-externals:latest
-
-  build_c8_externals:
-    name: build_c8
-    runs-on: [self-hosted]
-    needs: build_sl7_externals
-    permissions:
-      packages: write
-      contents: read
-    steps:    
-      - name: Log in to the Container registry
-        uses: docker/login-action@v2
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-      
-      - name: Extract metadata (tags, labels) for Docker
-        id: meta
-        uses: docker/metadata-action@v4
-        with:
-          images: |
-            ghcr.io/dune-daq/c8-externals
-          tags: |
-            type=raw,value=latest
-
-      - name: prepare build dir
-        run: |
-          build_dir="${{ github.workspace }}/docker-build"
-          mkdir -p $build_dir
-          cd $build_dir
-          refresh_date=$(date +%y-%m-%d)
-          echo "FROM ghcr.io/dune-daq/c8-spack:latest" > Dockerfile
-          echo 'MAINTAINER Pengfei Ding "dingpf@fnal.gov"' >> Dockerfile
-          echo "ENV REFRESHED_AT $refresh_date" >> Dockerfile
-          echo "COPY --from=ghcr.io/dune-daq/sl7-externals:latest /cvmfs/dunedaq.opensciencegrid.org/spack-externals /cvmfs/dunedaq.opensciencegrid.org/spack-externals" >> Dockerfile
-          echo "COPY --from=ghcr.io/dune-daq/sl7-externals:latest /cvmfs/dunedaq.opensciencegrid.org/pypi-repo /cvmfs/dunedaq.opensciencegrid.org/pypi-repo" >> Dockerfile
-          echo "COPY --from=ghcr.io/dune-daq/sl7-externals:latest /cvmfs/dunedaq.opensciencegrid.org/tools /cvmfs/dunedaq.opensciencegrid.org/tools" >> Dockerfile
-          echo "COPY --from=ghcr.io/dune-daq/sl7-externals:latest /cvmfs/dunedaq.opensciencegrid.org/setup_dunedaq.sh /cvmfs/dunedaq.opensciencegrid.org/setup_dunedaq.sh" >> Dockerfile
-          echo 'ENTRYPOINT ["/bin/bash"]' >> Dockerfile
-
-      - name: Build and push Docker images
-        uses: docker/build-push-action@v3
-        with:
-          context: ${{ github.workspace }}/docker-build
-          push: true
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
-
-  push_c8_externals_to_dockerhub:
-    name: push_c8_ext_dockerhub
-    runs-on: ubuntu-latest
-    needs: build_c8_externals
-    permissions:
-      packages: write
-      contents: read
-    steps:
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-      - name: push to dockerhub
-        run: |
-          docker pull ghcr.io/dune-daq/c8-externals:latest
-          docker tag ghcr.io/dune-daq/c8-externals:latest dunedaq/c8-externals:latest
-          docker push dunedaq/c8-externals:latest
+          docker pull ghcr.io/art-daq/sl7-externals:latest
+          docker tag ghcr.io/art-daq/sl7-externals:latest eflumerf/sl7-externals:latest
+          docker push eflumerf/sl7-externals:latest
