--- a/.github/workflows/track_new_issues.yml
+++ b/.github/workflows/track_new_issues.yml
@@ -10,9 +10,9 @@ jobs:
     steps:
       - name: Get project data
         env:
-          GITHUB_TOKEN: ${{ secrets.BOT_CI_ISSUES }}
-          ORGANIZATION: DUNE-DAQ
-          PROJECT_NUMBER: 5
+          BOT_CI_ISSUES: ${{ secrets.BOT_CI_ISSUES }}
+          ORGANIZATION: art-daq
+          PROJECT_NUMBER: 1
         run: |
           gh api graphql -f query='
             query($org: String!, $number: Int!) {
@@ -34,7 +34,7 @@ jobs:
                     
       - name: Add issue to project
         env:
-          GITHUB_TOKEN: ${{ secrets.BOT_CI_ISSUES }}
+          BOT_CI_ISSUES: ${{ secrets.BOT_CI_ISSUES }}
           ISSUE_ID: ${{ github.event.issue.node_id }}
         run: |
           item_id="$( gh api graphql -f query='
