--- a/.github/workflows/track_new_prs.yml
+++ b/.github/workflows/track_new_prs.yml
@@ -9,9 +9,9 @@ jobs:
     steps:
       - name: Get project data
         env:
-          GITHUB_TOKEN: ${{ secrets.BOT_CI_ISSUES }}
-          ORGANIZATION: DUNE-DAQ
-          PROJECT_NUMBER: 5
+          BOT_CI_ISSUES: ${{ secrets.BOT_CI_ISSUES }}
+          ORGANIZATION: art-daq
+          PROJECT_NUMBER: 1
         run: |
           gh api graphql -f query='
             query($org: String!, $number: Int!) {
@@ -33,7 +33,7 @@ jobs:
                     
       - name: Add issue to project
         env:
-          GITHUB_TOKEN: ${{ secrets.BOT_CI_ISSUES }}
+          BOT_CI_ISSUES: ${{ secrets.BOT_CI_ISSUES }}
         run: |
             PR_NUMBER=${{ github.event.pull_request.number }}
             node_id=`curl -H "Accept: application/vnd.github.v3+json" https://api.github.com/repos/${{ github.repository }}/pulls/${PR_NUMBER} | jq '.node_id'`
