--- a/.github/workflows/sl7-minimal.yaml
+++ b/.github/workflows/sl7-minimal.yaml
@@ -7,7 +7,8 @@ on:
       - 'v*'
     paths:
       - dockerfiles/sl7-minimal.dockerfile
-
+  schedule:
+    - cron: "0 0 0 * 0"
   workflow_dispatch:
 
 jobs:
