--- a/.github/workflows/sl7-minimal.yaml
+++ b/.github/workflows/sl7-minimal.yaml
@@ -8,7 +8,7 @@ on:
     paths:
       - dockerfiles/sl7-minimal.dockerfile
   schedule:
-    - cron: "0 0 0 * 0"
+    - cron: "0 0 * * 0"
   workflow_dispatch:
 
 jobs:
