--- a/.github/workflows/artdaq-suite.yaml
+++ b/.github/workflows/artdaq-suite.yaml
@@ -20,7 +20,10 @@ jobs:
     permissions:
       packages: write
       contents: read
-    steps:
+    steps: 
+      - name: Delete huge unnecessary tools folder
+        run: rm -rf /opt/hostedtoolcache
+        
       - name: Check out the repo
         uses: actions/checkout@v3
         with:
