--- a/.github/workflows/sl7-spack.yaml
+++ b/.github/workflows/sl7-spack.yaml
@@ -22,6 +22,9 @@ jobs:
       packages: write
       contents: read
     steps:
+      - name: Delete huge unnecessary tools folder
+        run: rm -rf /opt/hostedtoolcache
+
       - name: Check out the repo
         uses: actions/checkout@v3
         with:
