--- a/.github/workflows/sl7-spack.yaml
+++ b/.github/workflows/sl7-spack.yaml
@@ -2,7 +2,7 @@ name: Build sl7-spack docker image
 
 on:
   schedule:
-    - cron: "0 5 * * 2"
+    - cron: "0 5 1 * *"
 
   push:
     branches: [ develop ]
@@ -17,7 +17,7 @@ jobs:
 
   push_to_registries:
     name: Push Docker image to multiple registries
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     permissions:
       packages: write
       contents: read
