--- a/.github/workflows/artdaq-suite.yaml
+++ b/.github/workflows/artdaq-suite.yaml
@@ -25,19 +25,19 @@ jobs:
         run: rm -rf /opt/hostedtoolcache
         
       - name: Check out the repo
-        uses: actions/checkout@v3
+        uses: actions/checkout@main
         with:
           repository: art-daq/daq-docker
           path: daq-docker 
       
       - name: Log in to Docker Hub
-        uses: docker/login-action@v2
+        uses: docker/login-action@main
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       
       - name: Log in to the Container registry
-        uses: docker/login-action@v2
+        uses: docker/login-action@main
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
@@ -45,7 +45,7 @@ jobs:
       
       - name: Extract metadata (tags, labels) for Docker
         id: meta
-        uses: docker/metadata-action@v4
+        uses: docker/metadata-action@main
         with:
           images: |
             eflumerf/artdaq-suite
@@ -63,7 +63,7 @@ jobs:
           cp ${{ github.workspace }}/daq-docker/dockerfiles/artdaq-suite.dockerfile $build_dir/Dockerfile
       
       - name: Build and push Docker images
-        uses: docker/build-push-action@v3
+        uses: docker/build-push-action@main
         with:
           context: ${{ github.workspace }}/docker-build
           push: true
