--- a/.github/workflows/sl7-minimal.yaml
+++ b/.github/workflows/sl7-minimal.yaml
@@ -27,13 +27,13 @@ jobs:
           path: daq-docker 
       
       - name: Log in to Docker Hub
-        uses: docker/login-action@main
+        uses: docker/login-action@master
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       
       - name: Log in to the Container registry
-        uses: docker/login-action@main
+        uses: docker/login-action@master
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
@@ -41,7 +41,7 @@ jobs:
       
       - name: Extract metadata (tags, labels) for Docker
         id: meta
-        uses: docker/metadata-action@main
+        uses: docker/metadata-action@master
         with:
           images: |
             eflumerf/sl7-minimal
@@ -59,7 +59,7 @@ jobs:
           cp ${{ github.workspace }}/daq-docker/dockerfiles/sl7-minimal.dockerfile $build_dir/Dockerfile
       
       - name: Build and push Docker images
-        uses: docker/build-push-action@main
+        uses: docker/build-push-action@master
         with:
           context: ${{ github.workspace }}/docker-build
           push: true
