--- a/.github/workflows/otsdaq-spack.yaml
+++ b/.github/workflows/otsdaq-spack.yaml
@@ -16,7 +16,7 @@ jobs:
 
   push_to_registries:
     name: Push Docker image to multiple registries
-    runs-on: ironwork
+    runs-on: self-hosted
     permissions:
       packages: write
       contents: read
