--- a/.github/workflows/artdaq-spack.yaml
+++ b/.github/workflows/artdaq-spack.yaml
@@ -33,6 +33,7 @@ jobs:
       - name: Log in to Docker Hub
         uses: docker/login-action@master
         with:
+          registry: docker.io
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       
@@ -62,6 +63,9 @@ jobs:
           cd $build_dir
           cp ${{ github.workspace }}/daq-docker/dockerfiles/artdaq-spack.dockerfile $build_dir/Dockerfile
       
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@master
+        
       - name: Build and push Docker images
         uses: docker/build-push-action@master
         with:
