--- a/.github/workflows/spack-setup.yaml
+++ b/.github/workflows/spack-setup.yaml
@@ -1,8 +1,9 @@
 name: Build spack-setup docker image
 
 on:
-  schedule:
-    - cron: "0 0 * * 0"
+  workflow_run:
+    workflows: [alma9-spack-base]
+    types: [completed]
   push:
     branches: [ main ]
     tags:
@@ -13,10 +14,10 @@ on:
   workflow_dispatch:
 
 jobs:
-
   push_to_registries:
     name: Push Docker image to multiple registries
     runs-on: self-hosted
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     permissions:
       packages: write
       contents: read
