--- a/.github/workflows/gcc-spack.yaml
+++ b/.github/workflows/gcc-spack.yaml
@@ -1,8 +1,9 @@
 name: Build gcc-spack docker image
 
 on:
-  schedule:
-    - cron: "0 0 * * 0"
+  workflow_run:
+    workflows: [spack-setup]
+    types: [completed]
   push:
     branches: [ main ]
     tags:
@@ -17,6 +18,7 @@ jobs:
   push_to_registries:
     name: Push Docker image to multiple registries
     runs-on: self-hosted
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     permissions:
       packages: write
       contents: read
