--- a/.github/workflows/spack-setup.yaml
+++ b/.github/workflows/spack-setup.yaml
@@ -17,7 +17,7 @@ jobs:
   push_to_registries:
     name: Push Docker image to multiple registries
     runs-on: self-hosted
-    if: ${{ github.event.workflow_run.conclusion == 'success' }}
+    if: ${{ github.event.workflow_run.conclusion == 'success' || github.event_name == 'workflow_dispatch }}
     permissions:
       packages: write
       contents: read
