--- a/.github/workflows/art-spack.yaml
+++ b/.github/workflows/art-spack.yaml
@@ -18,7 +18,7 @@ jobs:
   push_to_registries:
     name: Push Docker image to multiple registries
     runs-on: self-hosted
-    if: ${{ github.event.workflow_run.conclusion == 'success' || github.event_name == 'workflow_dispatch }}
+    if: ${{ github.event.workflow_run.conclusion == 'success' || github.event_name == 'workflow_dispatch' }}
     permissions:
       packages: write
       contents: read
