--- a/.github/workflows/artdaq-spack.yaml
+++ b/.github/workflows/artdaq-spack.yaml
@@ -1,9 +1,8 @@
 name: Build artdaq-spack docker image
 
 on:
-  workflow_run:
-    workflows: [art-spack]
-    types: [completed]
+  schedule:
+    - cron: "0 0 * * 4"
   push:
     branches: [ main ]
     tags:
@@ -18,7 +17,6 @@ jobs:
   push_to_registries:
     name: Push Docker image to multiple registries
     runs-on: self-hosted
-    if: ${{ github.event.workflow_run.conclusion == 'success' || github.event_name == 'workflow_dispatch' }}
     permissions:
       packages: write
       contents: read
