--- a/.github/workflows/spack-setup.yaml
+++ b/.github/workflows/spack-setup.yaml
@@ -1,9 +1,8 @@
 name: Build spack-setup docker image
 
 on:
-  workflow_run:
-    workflows: [alma9-spack-base]
-    types: [completed]
+  schedule:
+    - cron: "0 0 * * 1"
   push:
     branches: [ main ]
     tags:
@@ -17,7 +16,6 @@ jobs:
   push_to_registries:
     name: Push Docker image to multiple registries
     runs-on: self-hosted
-    if: ${{ github.event.workflow_run.conclusion == 'success' || github.event_name == 'workflow_dispatch' }}
     permissions:
       packages: write
       contents: read
