Move to consolidated configuration with CVMFS

--- a/.github/workflows/artdaq-spack.yaml
+++ b/.github/workflows/artdaq-spack.yaml
@@ -21,6 +21,24 @@ jobs:
       packages: write
       contents: read
     steps: 
+      - uses: cvmfs-contrib/github-action-cvmfs@main
+
+      - name: change dir permission
+        run: |
+          sudo chmod -R go+rwx /var/lib/cvmfs
+
+      - name: Cache cvmfs cache
+        id: cvmfs_cache
+        uses: actions/cache@main
+        with:
+          path: /var/lib/cvmfs/shared
+          key: cachecvmfs
+ 
+      - name: restore dir permission
+        run: |
+          sudo chown -R cvmfs.cvmfs /var/lib/cvmfs
+          sudo chmod -R go-rwx /var/lib/cvmfs
+
       - name: Delete huge unnecessary tools folder
         run: rm -rf /opt/hostedtoolcache
         
@@ -73,4 +91,7 @@ jobs:
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
-
+          
+      - name: change dir permission again
+        run: |
+          sudo chmod -R go+rwx /var/lib/cvmfs
