--- a/.github/workflows/artdaq-spack.yaml
+++ b/.github/workflows/artdaq-spack.yaml
@@ -21,7 +21,7 @@ jobs:
       packages: write
       contents: read
     steps: 
-      - uses: cvmfs-contrib/github-action-cvmfs@main
+      - uses: cvmfs-contrib/github-action-cvmfs@v4
 
       - name: Test CVMFS
         run: |
