--- a/.github/workflows/otsdaq-spack-selfhosted.yaml
+++ b/.github/workflows/otsdaq-spack-selfhosted.yaml
@@ -1,14 +1,14 @@
 name: Build otsdaq-spack docker image
 
 on:
-  #schedule:
-  #  - cron: "0 0 * * 5"
-  #push:
-  #  branches: [ main ]
-  #  tags:
-  #    - 'v*'
-  #  paths:
-  #    - dockerfiles/otsdaq-spack.dockerfile
+  schedule:
+    - cron: "0 0 * * 5"
+  push:
+    branches: [ main ]
+    tags:
+      - 'v*'
+    paths:
+      - dockerfiles/otsdaq-spack.dockerfile
 
   workflow_dispatch:
 
@@ -16,32 +16,15 @@ jobs:
 
   push_to_registries:
     name: Push Docker image to multiple registries
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     permissions:
       packages: write
       contents: read
     steps:     
-      - uses: cvmfs-contrib/github-action-cvmfs@main
-
-      - name: change dir permission
+      - name: Test CVMFS
         run: |
-          sudo chmod -R go+rwx /var/lib/cvmfs
+          ls -l /cvmfs/fermilab.opensciencegrid.org/products/artdaq/artdaq_spack
 
-      - name: Cache cvmfs cache
-        id: cvmfs_cache
-        uses: actions/cache@main
-        with:
-          path: /var/lib/cvmfs/shared
-          key: cachecvmfs
- 
-      - name: restore dir permission
-        run: |
-          sudo chown -R cvmfs.cvmfs /var/lib/cvmfs
-          sudo chmod -R go-rwx /var/lib/cvmfs
-
-      - name: Delete huge unnecessary tools folder
-        run: rm -rf /opt/hostedtoolcache
-        
       - name: Check out the repo
         uses: actions/checkout@main
         with:
@@ -88,6 +71,3 @@ jobs:
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
           
-      - name: change dir permission again
-        run: |
-          sudo chmod -R go+rwx /var/lib/cvmfs
