--- a/.github/workflows/artdaq-spack-selfhosted.yaml
+++ b/.github/workflows/artdaq-spack-selfhosted.yaml
@@ -63,7 +63,7 @@ jobs:
           mkdir -p $build_dir
           cd $build_dir
           cp ${{ github.workspace }}/daq-docker/dockerfiles/artdaq-spack.dockerfile $build_dir/Dockerfile
-          cp -a /cvmfs/fermilab.opensciencegrid.org/products/artdaq/artdaq_spack artdaq_spack
+          cp -a /cvmfs/fermilab.opensciencegrid.org/products/artdaq/artdaq_spack $build_dir/artdaq_spack
       
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@master
