--- a/.github/workflows/artdaq-spack-selfhosted.yaml
+++ b/.github/workflows/artdaq-spack-selfhosted.yaml
@@ -20,10 +20,10 @@ jobs:
     permissions:
       packages: write
       contents: read
-    steps: 
+    steps:   
       - name: Test CVMFS
         run: |
-          ls -l /cvmfs/fermilab.opensciencegrid.org/products/artdaq/artdaq_spack
+          ls -l /cvmfs/fermilab.opensciencegrid.org/products/artdaq/spack_areas
 
       - name: Check out the repo
         uses: actions/checkout@main
@@ -63,7 +63,7 @@ jobs:
           mkdir -p $build_dir
           cd $build_dir
           cp ${{ github.workspace }}/daq-docker/dockerfiles/artdaq-spack.dockerfile $build_dir/Dockerfile
-          rsync -ax /cvmfs/fermilab.opensciencegrid.org/products/artdaq/artdaq_spack/ $build_dir/artdaq_spack
+          rsync -ax /cvmfs/fermilab.opensciencegrid.org/products/artdaq/spack_areas/ $build_dir/spack_areas
       
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@master
