--- a/.github/workflows/artdaq-spack.yaml
+++ b/.github/workflows/artdaq-spack.yaml
@@ -23,10 +23,6 @@ jobs:
     steps: 
       - uses: cvmfs-contrib/github-action-cvmfs@v4
 
-      - name: Test CVMFS
-        run: |
-          ls -l /cvmfs/fermilab.opensciencegrid.org/products/artdaq/artdaq_spack
-
       - name: change dir permission
         run: |
           sudo chmod -R go+rwx /var/lib/cvmfs
@@ -42,6 +38,10 @@ jobs:
         run: |
           sudo chown -R cvmfs.cvmfs /var/lib/cvmfs
           sudo chmod -R go-rwx /var/lib/cvmfs
+      
+      - name: Test CVMFS
+        run: |
+          ls -l /cvmfs/fermilab.opensciencegrid.org/products/artdaq/spack_areas
 
       - name: Delete huge unnecessary tools folder
         run: rm -rf /opt/hostedtoolcache
@@ -84,7 +84,7 @@ jobs:
           mkdir -p $build_dir
           cd $build_dir
           cp ${{ github.workspace }}/daq-docker/dockerfiles/artdaq-spack.dockerfile $build_dir/Dockerfile
-          rsync -ax /cvmfs/fermilab.opensciencegrid.org/products/artdaq/artdaq_spack/ $build_dir/artdaq_spack
+          rsync -ax /cvmfs/fermilab.opensciencegrid.org/products/artdaq/spack_areas/ $build_dir/spack_areas
       
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@master
