--- a/.github/workflows/otsdaq-spack-selfhosted.yaml
+++ b/.github/workflows/otsdaq-spack-selfhosted.yaml
@@ -62,7 +62,7 @@ jobs:
           mkdir -p $build_dir
           cd $build_dir
           cp ${{ github.workspace }}/daq-docker/dockerfiles/otsdaq-spack.dockerfile $build_dir/Dockerfile
-          rsync -ax /cvmfs/fermilab.opensciencegrid.org/products/artdaq/artdaq_spack/ $build_dir/artdaq_spack
+          rsync -ax /cvmfs/fermilab.opensciencegrid.org/products/artdaq/spack_areas/ $build_dir/spack_areas
       
       - name: Build and push Docker images
         uses: docker/build-push-action@master
