--- a/.github/workflows/artdaq-spack-selfhosted.yaml
+++ b/.github/workflows/artdaq-spack-selfhosted.yaml
@@ -68,7 +68,7 @@ jobs:
         run: |
           cd ${{ github.workspace }}/artdaq
           artdaqver=v`grep "project" CMakeLists.txt|grep -oE "VERSION [^)]*"|awk '{print $2}'|sed 's/\./_/g'`
-          echo "artdaqver=$artdaqver}" >> $GITHUB_OUTPUT
+          echo "artdaqver=${artdaqver}" >> $GITHUB_OUTPUT
 
       - name: prepare build dir
         run: |
