--- a/.github/workflows/git-whitespace.yml
+++ b/.github/workflows/git-whitespace.yml
@@ -9,6 +9,8 @@ on:
       - '.github/**'
   pull_request:
     branches: [ develop ]
+  schedule:
+    - cron: "0 7 * * *"
   workflow_dispatch:
 
 jobs:
