--- a/.github/workflows/otsdaq-spack-selfhosted.yaml
+++ b/.github/workflows/otsdaq-spack-selfhosted.yaml
@@ -62,8 +62,8 @@ jobs:
         uses: docker/metadata-action@master
         with:
           images: |
-            eflumerf/otsdaq-spack${{matrix.spackVer}-al${{matrix.os}}
-            ghcr.io/art-daq/otsdaq-spack${{matrix.spackVer}-al${{matrix.os}}
+            eflumerf/otsdaq-spack${{matrix.spackVer}}-al${{matrix.os}}
+            ghcr.io/art-daq/otsdaq-spack${{matrix.spackVer}}-al${{matrix.os}}
           tags: |
             type=raw,value=latest
             type=ref,event=branch
